Changed how user information UI is being handled to prevent link to my page from jumping

--- a/css/index.css
+++ b/css/index.css
@@ -99,8 +99,8 @@ footer nav {
 }
 
 #my-profile-container {
-    display: none;
-    height: 80%;
+    display: grid;
+    height: 4rem;
     margin: auto;
 }
 
